--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,18 @@
 body {
     color: #3d3b3b;
 }
+body::-webkit-scrollbar, .modal::-webkit-scrollbar {
+    width: 15px;
+    background-color: #fff;
+}
+ 
+body::-webkit-scrollbar-track, .modal::-webkit-scrollbar-track {
+    background-color: #fff;
+}
+ 
+body::-webkit-scrollbar-thumb, .modal::-webkit-scrollbar-thumb {
+    background-color: teal;
+}
 a, p, span, ul {
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -8,7 +20,7 @@ header {
     position: fixed;
     right: 0;
     left: 0;
-    z-index: 99;
+    z-index: 999;
 }
 .main {
     padding-top: 74px;
@@ -59,7 +71,7 @@ nav ul a {
     display: block; 
     position: relative
 }
-nav ul a::after, .active::after {
+nav ul a::after, a.active::after {
     content: ''; 
     position: absolute; 
     bottom: 15px; 
@@ -76,12 +88,12 @@ nav ul a::after, .active::after {
     transition: opacity 300ms, transform 300ms; 
     transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
 }
-nav ul a:hover::after, .active::after {
+nav ul a:hover::after, a.active::after {
     opacity: 1; 
     -webkit-transform: translate3d(0, 0.2em, 0); 
     transform: translate3d(0, 0.2em, 0);
 }
-nav ul a::after, .active::after {opacity: 1; 
+nav ul a::after, a.active::after {opacity: 1; 
     -webkit-transform: scale(0); 
     -ms-transform: scale(0); 
     transform: scale(0); 
@@ -89,7 +101,7 @@ nav ul a::after, .active::after {opacity: 1;
     -ms-transform-origin: center; 
     transform-origin: center;
 }
-nav ul a:hover::after, .active::after {
+nav ul a:hover::after, a.active::after {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1);
@@ -235,6 +247,7 @@ transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
     position:relative;
     float:left;
     height: 400px;
+    width: 100%;
 }
 .demo-3 figure {
     margin: 0;
@@ -308,9 +321,11 @@ transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
     -moz-transform:rotateY(0);
     transform:rotateY(0)
 }
-footer {position: relative}
+footer {
+    position: relative
+}
 .modal {
-    max-height: none;
+    max-height: 85%;
     padding: 20px 0;
 }
 .contact_form .row {
@@ -323,24 +338,47 @@ textarea.materialize-textarea {
     height: 100px !important;
 }
 .social {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 .social a {
     text-align: center;
     font-size: 30px;
     padding: 8px;
-}
-.social i {
+    display: flex;
     transition: all .4s;
 }
-.social a:hover i {
-    color: teal;
+.social i, .social img {
+    margin: auto;
+    object-fit: cover;
+}
+.social a:hover {
+    background-color: teal;
+    border-radius: 15px 3px 15px 3px;
 }
 .btn-floating {
-    position: fixed;
-    right: 50px;
-    bottom: 80px;
+    position: absolute;
+    right: 100px;
+    top: -25px;
     z-index: 100;
+}
+.success p {
+    padding: 5px 10px;
+    background-color: rgb(186, 229, 186);
+    color: green;
+    border: solid 1px green;
+    border-radius: 3px;
+}
+.error p {
+    padding: 5px 10px;
+    background-color: rgb(235, 188, 188);
+    color: darkred;
+    border: solid 1px darkred;
+    border-radius: 3px;
+}
+.footer-copyright .row {
+    margin: 0
 }
 .timeline2 {
     overflow-y: scroll;
@@ -361,7 +399,7 @@ textarea.materialize-textarea {
 }
 .timeline2::-webkit-scrollbar {
     width: 10px;
-    background-color: fff;
+    background-color: #fff;
 }
  
 .timeline2::-webkit-scrollbar-track {
@@ -371,8 +409,8 @@ textarea.materialize-textarea {
  
 .timeline2::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px teal;
-    background-color: teal;
+    -webkit-box-shadow: inset 0 0 6px rgb(208, 223, 223);
+    background-color: rgb(208, 223, 223);
 }
  
 .timeline2 ul {
