add project + animation navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,14 +17,23 @@ body::-webkit-scrollbar-thumb, .modal::-webkit-scrollbar-thumb {
 a, p, span, ul {
     font-family: 'Josefin Sans', sans-serif;
 }
+.nav a, .sidenav li>a {
+    font-family: 'Qwigley', cursive;
+    font-size: 30px;
+}
 header {
     position: fixed;
     right: 0;
     left: 0;
     z-index: 999;
 }
-.main {
-    padding-top: 74px;
+.mobile_nav_logo {
+    margin-top: 50px;
+    text-align: center;
+
+}
+.sidenav li:nth-child(2) {
+    margin-top: 20px;
 }
 .section {
     padding: 100px 50px;
@@ -60,10 +69,14 @@ h6:not(.textShadow) {
     left: 50px;
     transition: all .5s;
 }
-.head-link:not(footer .head-link) {
-    color: #3d3b3b;
-    font-family: 'Qwigley', cursive;
-    font-size: 30px;
+.sidenav-head-link {
+    color:#3d3b3b;
+}
+.head-link:not(footer .head-link), nav .sidenav-trigger {
+    color: #fff  ;
+}
+nav {
+    transition: all .3s;
 }
 nav ul a:hover {
     background-color: transparent;
@@ -71,6 +84,9 @@ nav ul a:hover {
 nav ul a {
     display: block; 
     position: relative;
+}
+.tealVersion::after, .tealVersion.active::after {
+    background-color: teal;
 }
 nav ul a::after, a.active::after {
     content: ''; 
@@ -81,13 +97,13 @@ nav ul a::after, a.active::after {
     width: 100%; 
     margin: 0 auto; 
     height: 3px; 
-    background-color: teal; 
+    background-color: #fff; 
     opacity: 0; 
-    -webkit-transition: opacity 300ms, -webkit-transform 300ms; 
-    transition: opacity 300ms, -webkit-transform 300ms; 
-    -o-transition: opacity 300ms, transform 300ms; 
-    transition: opacity 300ms, transform 300ms; 
-    transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
+    -webkit-transition: opacity 500ms, -webkit-transform 500ms; 
+    transition: opacity 500ms, -webkit-transform 500ms; 
+    -o-transition: opacity 500ms, transform 500ms; 
+    transition: opacity 500ms, transform 500ms; 
+    transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
 }
 nav ul a:hover::after, a.active::after {
     opacity: 1; 
@@ -115,7 +131,7 @@ nav ul a:hover::after, a.active::after {
     background: linear-gradient(90deg, rgba(0,150,136,1) 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
 }
 .caption {
-    background: url('../images/separation.jpg') no-repeat fixed; background-size: cover; height: 600px; display: flex;
+    background: url('../images/separation.jpg') no-repeat fixed; background-size: cover; height: 600px; display: flex; padding-top: 74px;
 }
 .border-top {
     background: rgb(255,255,255);
@@ -126,6 +142,9 @@ nav ul a:hover::after, a.active::after {
     background: rgb(0,150,136);
     background: linear-gradient(90deg, rgba(0,150,136,1) 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
     height: 10px;
+}
+.border-top-right.header {
+    display: none;
 }
 .text-caption {
     padding: 6% 10% 8% 10%;
@@ -140,9 +159,6 @@ nav ul a:hover::after, a.active::after {
 .nav-wrapper
 {
     text-align:center;
-}
-nav .sidenav-trigger {
-    color: #3d3b3b;
 }
 #aPropos .profile .img_profile {
     width: 100%;
@@ -175,13 +191,22 @@ nav .sidenav-trigger {
     height: 50px;
     object-fit: contain;
 }
+#competences .perso img {
+    width: 45px;
+    height: 45px;
+    object-fit: contain;
+    -webkit-filter: invert(30%);
+    filter: invert(30%);
+}
 .progress-bar {
     border-radius: 20px;
 }
 .progress-inner-bar {
     border-radius: 20px 0 0 20px;
-    height: 20px;
-    background: teal
+    height: 15px;
+    width: 5%;
+    background: teal;
+    transition: all .9s;
 }
 #competences p {
     margin: 5px 0;
@@ -189,19 +214,19 @@ nav .sidenav-trigger {
 #competences .row {
     margin: 0;
 }
-#html {width: 95%;}
-#css {width: 95%;}
-#php {width: 75%;}
-#js {width: 60%;}
-#sql {width: 40%;}
-#laravel {width: 30%;}
-#symfony {width: 60%;}
-#vue {width: 30%;}
-#bootstrap {width: 75%;}
-#jquery {width: 80%;}
-#vs_code {width: 85%;}
-#github {width: 75%;}
-#anglais {width: 95%;}
+.html {width: 95%;}
+.css {width: 95%;}
+.php {width: 75%;}
+.js {width: 60%;}
+.sql {width: 40%;}
+.laravel {width: 30%;}
+.symfony {width: 60%;}
+.vue {width: 30%;}
+.bootstrap {width: 75%;}
+.jquery {width: 80%;}
+.vs_code {width: 85%;}
+.github {width: 75%;}
+.anglais {width: 95%;}
 
 #portfolio .col {
     overflow: hidden;
@@ -296,7 +321,7 @@ nav .sidenav-trigger {
     -moz-transform:rotateY(0);
     transform:rotateY(0)
 }
-footer {
+#contact {
     position: relative
 }
 .modal {
@@ -393,7 +418,7 @@ textarea.materialize-textarea {
     right: 100px;
     top: -25px;
     z-index: 100;
-}
+} 
 .success p {
     padding: 5px 10px;
     background-color: rgb(186, 229, 186);
@@ -410,6 +435,9 @@ textarea.materialize-textarea {
 }
 .footer-copyright .row {
     margin: 0
+}
+.page-footer.section {
+    padding: 100px 50px 20px 50px;
 }
 .timeline2 {
     overflow-y: scroll;
@@ -441,34 +469,31 @@ textarea.materialize-textarea {
 .timeline2::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgb(208, 223, 223);
+    box-shadow: inset 0 0 6px rgb(208, 223, 223);
     background-color: rgb(208, 223, 223);
-}
- 
-.timeline2 ul {
-  /* padding: 50px 0; */
 }
 .timeline2 ul li {
     list-style-type: none;
     position: relative;
-    width: 2px;/* width: 6px; */
+    width: 2px;
     margin: 0 auto;
-    padding-top: 10px;/* 50px; */
-    padding-bottom: 10px;/* padding-bottom: 20px; = center padding-bottom: 10px; = center */
-    background: #3d3b3b; /* background: black;  */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: #3d3b3b; 
     border-left: 3px double #3d3b3b;
 }
 .timeline2 ul li::after {
     content: '';
     position: absolute;
     left: 50%;
-    top: 30px; /* bottom: 0;  bottom: 50%;=center top: 30px;=top  */ 
-    transform: translateX(-55%);/* transform: translateX(-50%); */
+    top: 30px; 
+    transform: translateX(-55%);
     -webkit-transform: translateX(-55%);
     width: 30px;
     height: 30px;
     border-radius: 50%;
     background: inherit;
-    border: 2px solid #80cbc4;
+    border: 2px solid #B2DFDB;
 }
 
 .timeline2 ul li div {
@@ -480,7 +505,7 @@ textarea.materialize-textarea {
 .timeline2 ul li div::before {
     content: '';
     position: absolute;
-    top: 20px; /* bottom: 7px; bottom: 50%;=center top: 20px;=top */
+    top: 20px;
     width: 0;
     height: 0;
     border-style: solid;
@@ -490,8 +515,8 @@ textarea.materialize-textarea {
 }
 .timeline2 ul li:nth-child(odd) div::before {
     left: -15px;
-    border-width: 16px 16px 16px 0;/* border-width: 8px 16px 8px 0; */
-    border-color: transparent #80cbc4 transparent transparent;
+    border-width: 16px 16px 16px 0;
+    border-color: transparent #B2DFDB transparent transparent;
 }
 
 .timeline2 ul li:nth-child(even) div {
@@ -500,8 +525,8 @@ textarea.materialize-textarea {
 
 .timeline2 ul li:nth-child(even) div::before {
     right: -15px;
-    border-width: 16px 0 16px 16px; /* border-width: 8px 0 8px 16px; */
-    border-color: transparent transparent transparent #80cbc4;
+    border-width: 16px 0 16px 16px;
+    border-color: transparent transparent transparent #B2DFDB;
 }
 .timeline2 ul li:nth-child(odd) .time {
     position: absolute;
@@ -551,9 +576,6 @@ textarea.materialize-textarea {
     -webkit-transform: none;
     visibility: visible;
     opacity: 1;
-    /* disabled when arrow is on top position
-    border-radius: 10px;
-    */
 }
 .timeline2 ul li  .time {
     transition: all .5s ease-in-out;
@@ -580,7 +602,7 @@ textarea.materialize-textarea {
     }
 }
 @media screen and (max-width: 600px) {
-    .main {
+    .caption {
         padding-top: 66px;
     }
     .section {
