--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* MAIN */
 body {
     color: #3d3b3b;
     font-size: 16px;
@@ -69,8 +70,8 @@ h6:not(.textShadow) {
     left: 50px;
     transition: all .5s;
 }
-.sidenav-head-link {
-    color:#3d3b3b;
+.sidenav-head-link, .sidenav-headlink, .grey-text {
+    color:#3d3b3b !important;
 }
 .head-link:not(footer .head-link), nav .sidenav-trigger {
     color: #fff  ;
@@ -143,7 +144,7 @@ nav ul a:hover::after, a.active::after {
     background: linear-gradient(90deg, rgba(0,150,136,1) 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
     height: 10px;
 }
-.border-top-right.header {
+.hide {
     display: none;
 }
 .text-caption {
@@ -587,6 +588,20 @@ textarea.materialize-textarea {
     transform: rotate(0deg);
     -webkit-transform:rotate(0deg);
 }
+/* POLICY */
+.policy_main {
+    padding: 150px 0 100px 0;
+    color: rgb(12, 12, 12)
+}
+.policy_main a {
+    font-weight: bold;
+}
+.policy_main ul, .policy_main ul:not(.browser-default)>li {
+    list-style-type: disc;
+    width: 95%;
+    margin: 0 auto;
+}
+
 /* MEDIA QUERIES */
 @media screen and (max-width: 900px) {
   .timeline2 ul li div {
