--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -637,6 +637,14 @@ textarea.materialize-textarea {
         width: 80px;
         height: 80px;
     }
+    .back-logo {
+        left: 30px;
+        top: 13px;
+    }
+    .back-logo .logo-img {
+        width: 50px;
+        height: 50px;
+    }
     h5 {
         font-size: 8vw;
     }
