--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ body::-webkit-scrollbar-track, .modal::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb, .modal::-webkit-scrollbar-thumb {
     background-color: teal;
 }
+.hidden {
+    display: none;
+}
 a, p, span, ul {
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -147,9 +150,6 @@ nav ul a:hover::after, a.active::after {
     background: linear-gradient(90deg, #004D40 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
     height: 10px;
 }
-.hide {
-    display: none;
-}
 .text-caption {
     padding: 6% 10% 8% 10%;
 }
@@ -234,7 +234,6 @@ nav ul a:hover::after, a.active::after {
 
 #portfolio .col {
     overflow: hidden;
-    height: 400px;
     margin-bottom: 25px;
 }
 #portfolio .title {
@@ -249,6 +248,9 @@ nav ul a:hover::after, a.active::after {
 }
 #portfolio .border-top.title-parts, #portfolio .border-top-right.title-parts {
     height: 6px;
+}
+#portfolio .col.competence_show_btn {
+    margin: 0;
 }
 .demo-3 {
     position:relative;
