--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /* MAIN */
 body {
     color: #3d3b3b;
@@ -30,6 +37,9 @@ header {
     right: 0;
     left: 0;
     z-index: 999;
+}
+img {
+    height: auto;
 }
 .mobile_nav_logo {
     margin-top: 50px;
@@ -71,6 +81,8 @@ h6:not(.textShadow) {
     position: absolute;
     top: 20px;
     left: 50px;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
     transition: all .5s;
 }
 .sidenav-head-link, .sidenav-headlink, .grey-text {
@@ -83,6 +95,8 @@ h6:not(.textShadow) {
     color: #fff  ;
 }
 nav {
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
     transition: all .3s;
 }
 nav ul a:hover {
@@ -135,18 +149,24 @@ nav ul a:hover::after, a.active::after {
     margin: 0 auto;
     height: 5px;
     background: #004D40;
+    background: -webkit-gradient(linear, left top, right top, from(#004D40), color-stop(48%, rgba(15,190,174,1)), to(rgba(255,255,255,1)));
+    background: -o-linear-gradient(left, #004D40 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
     background: linear-gradient(90deg, #004D40 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
 }
 .caption {
-    background: url('../images/separation.jpg') no-repeat fixed; background-size: cover; height: 600px; display: flex; padding-top: 74px;
+    background: url('../images/separation.webp') no-repeat fixed; background-size: cover; height: 600px; display: -webkit-box; display: -ms-flexbox; display: flex; padding-top: 74px;
 }
 .border-top {
     background: rgb(255,255,255);
+    background: -webkit-gradient(linear, left top, right top, from(rgba(255,255,255,1)), color-stop(48%, rgba(15,190,174,1)), to(#004D40));
+    background: -o-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(15,190,174,1) 48%, #004D40 100%);
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(15,190,174,1) 48%, #004D40 100%);
     height: 10px;
 }
 .border-top-right {
     background: #004D40;
+    background: -webkit-gradient(linear, left top, right top, from(#004D40), color-stop(48%, rgba(15,190,174,1)), to(rgba(255,255,255,1)));
+    background: -o-linear-gradient(left, #004D40 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
     background: linear-gradient(90deg, #004D40 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
     height: 10px;
 }
@@ -165,10 +185,8 @@ nav ul a:hover::after, a.active::after {
     text-align:center;
 }
 #aPropos .profile .img_profile {
-    width: 100%;
-    object-fit: cover;
-    width: 200px;
-    height: 200px;
+    -o-object-fit: cover;
+       object-fit: cover;
     border-radius: 50% 5px 50% 5px; 
 }
 #aPropos .text {
@@ -178,7 +196,6 @@ nav ul a:hover::after, a.active::after {
 }
 .competences {
     -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
     box-sizing: content-box;
     border: none;
     font: normal 90px/1 "Qwigley", Helvetica, sans-serif;
@@ -191,14 +208,12 @@ nav ul a:hover::after, a.active::after {
     padding: 0 0 10px 0;
 }
 #competences img {
-    width: 50px;
-    height: 50px;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
 }
 #competences .perso img {
-    width: 45px;
-    height: 45px;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
     -webkit-filter: invert(30%);
     filter: invert(30%);
 }
@@ -210,6 +225,8 @@ nav ul a:hover::after, a.active::after {
     height: 10px;
     width: 5%;
     background: #004D40;
+    -webkit-transition: all .9s;
+    -o-transition: all .9s;
     transition: all .9s;
 }
 #competences p {
@@ -232,15 +249,28 @@ nav ul a:hover::after, a.active::after {
 .github {width: 75%;}
 .anglais {width: 95%;}
 
+#portfolio .row {
+    margin: 0;
+}
+
 #portfolio .col {
     overflow: hidden;
     margin-bottom: 25px;
 }
 #portfolio .title {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-size: 30px;
 }
 #portfolio .title p {
@@ -263,17 +293,22 @@ nav ul a:hover::after, a.active::after {
     padding:0;
     position:relative;
     cursor:pointer;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
     transition: all .3s;
 }
 .demo-3 figure img {
     width: 100%;
-    object-fit: cover;
-    object-position: top;
+    max-height: 400px;
+    min-height: 400px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: top;
+       object-position: top;
     display:block;
     position:relative;
     z-index:10;
     margin:-15px 0;
-    height: 400px;
     border: solid 5px white;
     border-radius: 2px;
 }
@@ -282,7 +317,6 @@ nav ul a:hover::after, a.active::after {
     position:absolute;
     z-index:5;
     -webkit-box-sizing:border-box;
-    -moz-box-sizing:border-box;
     box-sizing:border-box
 }
 .demo-3 figure h2 {
@@ -306,29 +340,41 @@ nav ul a:hover::after, a.active::after {
     padding: 26px 44px;
     background-color: #fff;
     text-align:center;
-    backface-visibility:hidden;
+    -webkit-backface-visibility:hidden;
+            backface-visibility:hidden;
     -webkit-transform:rotateY(-180deg);
-    -moz-transform:rotateY(-180deg);
     transform:rotateY(-180deg);
     -webkit-transition:all .5s;
-    -moz-transition:all .5s;
+    -o-transition:all .5s;
     transition:all .5s;
 }
 .demo-3 figure img {
-    backface-visibility:hidden;
+    -webkit-backface-visibility:hidden;
+            backface-visibility:hidden;
     -webkit-transition:all .5s;
-    -moz-transition:all .5s;
+    -o-transition:all .5s;
     transition:all .5s
 }
 .demo-3 figure:hover img,figure.hover img {
     -webkit-transform:rotateY(180deg);
-    -moz-transform:rotateY(180deg);
     transform:rotateY(180deg)
 }
 .demo-3 figure:hover figcaption,figure.hover figcaption {
     -webkit-transform:rotateY(0);
-    -moz-transform:rotateY(0);
     transform:rotateY(0)
+}
+.upload_cv {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-flow: row wrap;
+    margin: 40px 0 -10px 0;
+}
+.upload_cv span {
+    width: 100%;
+}
+.download_btn {
+    display: inline-block;
 }
 #contact {
     position: relative
@@ -364,7 +410,8 @@ nav ul a:hover::after, a.active::after {
     border-right-color: #009688;
     border-top-color: transparent;
     border-left-color: transparent;
-    animation: loader-circle-2-animation-2 1s linear infinite;
+    -webkit-animation: loader-circle-2-animation-2 1s linear infinite;
+            animation: loader-circle-2-animation-2 1s linear infinite;
 }
 .loader-circle-2:after {
     width: 40px;
@@ -375,22 +422,47 @@ nav ul a:hover::after, a.active::after {
     border-left-color: transparent;
     top: 22%;
     left: 22%;
-    animation: loader-circle-2-animation 0.85s linear  infinite;
+    -webkit-animation: loader-circle-2-animation 0.85s linear  infinite;
+            animation: loader-circle-2-animation 0.85s linear  infinite;
+}
+@-webkit-keyframes loader-circle-2-animation {
+    0% {
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(-360deg);
+                transform: rotate(-360deg);
+    }
 }
 @keyframes loader-circle-2-animation {
     0% {
-        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
     }
     100% {
-        transform: rotate(-360deg);
+        -webkit-transform: rotate(-360deg);
+                transform: rotate(-360deg);
+    }
+}
+@-webkit-keyframes loader-circle-2-animation-2 {
+    0% {
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
     }
 }
 @keyframes loader-circle-2-animation-2 {
     0% {
-        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
     }
     100% {
-        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
     }
 }
 .contact_form .row {
@@ -403,26 +475,37 @@ textarea.materialize-textarea {
     height: 100px !important;
 }
 .social {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
 }
 .social a {
     text-align: center;
     font-size: 30px;
     padding: 8px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-transition: all .4s;
+    -o-transition: all .4s;
     transition: all .4s;
 }
 .social i, .social img {
     margin: auto;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 .social a:hover {
     background-color: #004D40;
     border-radius: 50% 3px 50% 3px;
 }
-.btn-floating {
+#contact .btn-floating {
     position: absolute;
     right: 100px;
     top: -25px;
@@ -463,7 +546,8 @@ textarea.materialize-textarea {
     color: #3d3b3b;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 .timeline2::-webkit-scrollbar {
     width: 10px;
@@ -496,7 +580,8 @@ textarea.materialize-textarea {
     position: absolute;
     left: 50%;
     top: 30px; 
-    transform: translateX(-55%);
+    -ms-transform: translateX(-55%); 
+        transform: translateX(-55%);
     -webkit-transform: translateX(-55%);
     width: 30px;
     height: 30px;
@@ -556,6 +641,7 @@ textarea.materialize-textarea {
     margin-bottom: 8px;
 }
 .timeline2 ul li::after {
+    -o-transition: background .5s ease-in-out;
     transition: background .5s ease-in-out;
     -webkit-transition: background .5s ease-in-out;
 }
@@ -566,6 +652,7 @@ textarea.materialize-textarea {
 .timeline2 ul li div {
     visibility: hidden;
     opacity: 0;
+    -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
 }
@@ -581,19 +668,23 @@ textarea.materialize-textarea {
 }
 
 .timeline2 ul li.in-view div {
-    transform: none;
+    -ms-transform: none;
+        transform: none;
     -webkit-transform: none;
     visibility: visible;
     opacity: 1;
 }
 .timeline2 ul li  .time {
+    -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
-    transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+        transform: rotate(-90deg);
     -webkit-transform:rotate(270deg);
 }
 .timeline2 ul li.in-view  .time {
-    transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
     -webkit-transform:rotate(0deg);
 }
 /* POLICY */
@@ -639,7 +730,9 @@ textarea.materialize-textarea {
     }
     .logo {
         left: 50%;
-        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+            -ms-transform: translateX(-50%);
+                transform: translateX(-50%);
     }
     .logo-img {
         width: 80px;
@@ -681,7 +774,8 @@ textarea.materialize-textarea {
         top: 60px;
         left: -23px;
         width: 90px;
-        transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
         -webkit-transform:rotate(0deg);
     }
     .timeline2 ul li:nth-child(even) .time {
@@ -689,15 +783,18 @@ textarea.materialize-textarea {
         top: 60px;
         right: -67px;
         width: 90px;
-        transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
         -webkit-transform:rotate(0deg);
     }
     .timeline2 ul li.in-view:nth-child(odd) .time {
-        transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+            transform: rotate(-90deg);
         -webkit-transform:rotate(270deg);					 
     }
     .timeline2 ul li.in-view:nth-child(even) .time {
-        transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+            transform: rotate(-90deg);
         -webkit-transform:rotate(270deg);
     }
   
