--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,6 +338,9 @@ nav ul a:hover::after, a.active::after {
 #portfolio .col.competence_show_btn {
     margin: 0;
 }
+.portfolio_blocks {
+    display: none
+}
 .demo-3 {
     position:relative;
     float:left;
