--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,12 +78,6 @@ body::-webkit-scrollbar-track, .modal::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb, .modal::-webkit-scrollbar-thumb {
     background-color: teal;
 }
-/* .teal.darken-4 {
-    background-color: rgb(0,77,64, .1) !important;
-}
-.teal.darken-4 h6, .teal.darken-4 p {
-    color: #3d3b3b !important;
-} */
 .hidden {
     display: none;
 }
@@ -164,6 +158,8 @@ h6:not(.textShadow) {
     color: #fff  ;
 }
 nav {
+    height: 80px;
+    line-height: 80px;
     -webkit-transition: all .3s;
     -o-transition: all .3s;
     transition: all .3s;
@@ -239,7 +235,23 @@ nav ul .head-link:hover::after, .head-link.active::after {
     background: linear-gradient(90deg, #004D40 0%, rgba(15,190,174,1) 48%, rgba(255,255,255,1) 100%);
 }
 .caption {
-    background: url('../images/separation.webp') no-repeat fixed; background-size: cover; height: 600px; display: -webkit-box; display: -ms-flexbox; display: flex; padding-top: 74px;
+    position: relative;
+    background: url('../images/separation.webp') no-repeat fixed; 
+    background-size: cover; 
+    height: 600px; 
+    display: -webkit-box; 
+    display: -ms-flexbox; 
+    display: flex; 
+    padding-top: 74px;
+}
+.caption::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, .3)
 }
 .border-top {
     background: rgb(255,255,255);
@@ -259,6 +271,7 @@ nav ul .head-link:hover::after, .head-link.active::after {
     padding: 6% 10% 8% 10%;
 }
 .box-caption {
+    z-index: 99;
     margin: auto;
     width: 40%;
 }
