update style project

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -221,7 +221,7 @@ body {
             margin: 0;
             padding: 0;
             position: relative;
-            cursor: pointer;
+            cursor: default;
             transition: all .9s;
             img {
                 transform-style: preserve-3d;
