--- a/templates/blocks/_contact.html.twig
+++ b/templates/blocks/_contact.html.twig
@@ -7,7 +7,9 @@
         <h6 class="center-align white-text competences">Pour me contacter</h6>
         <div class="row">
             <div class="col s12 l6">
-                <p class="center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a class="purple-text text-lighten-3" href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a>, je vous répondrai dans les plus brefs délais.</p>
+                {% include "blocks/contact/_new.html.twig" %}
+                <p class="center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a class="purple-text text-lighten-3" href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a>, ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
+                <p class="center-align"><button data-target="modal1" class="btn waves-effect waves-green modal-trigger">Contact</button></p>
             </div>
             <div class="col s12 l6">
                 <p class="center-align">Vous pouvez aussi me retrouver sur les sites suivants :</p>
