--- a/templates/blocks/_project.html.twig
+++ b/templates/blocks/_project.html.twig
@@ -26,7 +26,7 @@
                             </div>
                             <div class="links">
                             {% for link in project.links %}
-                                <a href="{{link.href}}" class="btn-primary btn-small wave-effect" >{{link.title}}</a>
+                                <a href="{{link.href}}" class="btn-primary btn-small wave-effect" target="_blank">{{link.title}}</a>
                             {% endfor %}
                             </div>
                         </figcaption>
