--- a/templates/security/authentication-success.html.twig
+++ b/templates/security/authentication-success.html.twig
@@ -1,4 +1,4 @@
-{% extends "auth-base.html.twig" %}
+{% extends "layouts/auth-base.html.twig" %}
 
 {% block title %}Connexion à l'Admin{% endblock %}
 
