--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -1,4 +1,4 @@
-{% extends 'error-base.html.twig' %}
+{% extends 'layouts/error-base.html.twig' %}
 {% block title %}Erreur serveur{% endblock %}
 {% block body %}
 
