--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -1,4 +1,4 @@
-{% extends 'error-base.html.twig' %}
+{% extends 'layouts/error-base.html.twig' %}
 {% block title %}Non autorisé{% endblock %}
 
 {% block body %}
