--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,4 +1,4 @@
-{% extends 'auth-base.html.twig' %}
+{% extends 'layouts/auth-base.html.twig' %}
 
 {% block title %}Reset Admin Password{% endblock %}
 
