--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -209,6 +209,9 @@ body {
         .modal {
             max-height: 85%;
             padding: 0 0 20px 0;
+            * {
+                transition: all .3s
+            }
             textarea {
                 height: 100px !important;
             }
