--- a/templates/blocks/answer/reply-email.html.twig
+++ b/templates/blocks/answer/reply-email.html.twig
@@ -204,9 +204,8 @@ table{
 	position: relative;
 	z-index: 0;
 }
-
 .hero .text{
-	color: rgba(0,0,0,.3);
+	color: rgba(0,0,0,.7);
 }
 .hero .text h2{
 	color: #000;
@@ -311,35 +310,19 @@ ul.social li{
 </head>
 
 <body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly; background-color: #f1f1f1;">
-	<center style="width: 100%; background-color: #f1f1f1;">
+	<div style="width: 100%; background-color: #f1f1f1;">
     <div style="display: none; font-size: 1px;max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; mso-hide: all; font-family: sans-serif;">
       &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
     </div>
     <div style="max-width: 600px; margin: 0 auto;" class="email-container">
     	<!-- BEGIN BODY -->
-      <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
+      <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
       	<tr>
-          <td valign="top" class="bg_white" style="padding: 1em 2.5em 0 2.5em;">
-          	<table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
-          		<tr>
-          			<td class="logo" style="text-align: center;">
-			            <h1 class="logo"><img src="/images/logo_purple.webp"></h1>
-			          </td>
-          		</tr>
-          	</table>
-          </td>
-	      </tr><!-- end tr -->
-	      <tr>
-          <td valign="middle" class="hero bg_white" style="padding: 3em 0 2em 0;">
-            <img src="images/email.png" alt="" style="width: 300px; max-width: 600px; height: auto; margin: auto; display: block;">
-          </td>
-	      </tr><!-- end tr -->
-				<tr>
-          <td valign="middle" class="hero bg_white" style="padding: 2em 0 4em 0;">
+          <td class="hero bg_white" style="padding: 2em 0 4em 0;">
             <table>
             	<tr>
             		<td>
-            			<div class="text" style="padding: 0 2.5em; text-align: center;">
+            			<div class="text" style="padding: 0 2.5em;">
                             <div class="card-panel">
                                 <p>{{messageContent|nl2br}}</p>
                             </div>
@@ -356,7 +339,7 @@ ul.social li{
           <td valign="middle" class="bg_light footer email-section">
             <table>
             	<tr>
-                    <td class="logo"><img src="/images/logo_purple.webp"></td>
+                    <td class="logo"><img src="https://i.ibb.co/YWj96VS/logo-purple.webp"> &nbsp;&nbsp;</td>
                     <td>
                         Charlotte Saidi | Développeuse Web <br>
                         <a href="https://charlottesaidi.fr">https://charlottesaidi.fr</a>
@@ -370,7 +353,7 @@ ul.social li{
       </table>
 
     </div>
-  </center>
+  </div>
 </body>
 </html>
 
